Corrected viewport problem on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
 
 	display: flex;
 	flex-direction: column;
-	height: 100vh;
+	height: 100dvh;
 }
 
 .myname {
